--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Make your JSS like StyledComponents",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "babel -d dist src"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,13 @@
   "bugs": {
     "url": "https://github.com/lestad/jss-styled/issues"
   },
-  "homepage": "https://github.com/lestad/jss-styled#readme"
+  "homepage": "https://github.com/lestad/jss-styled#readme",
+  "devDependencies": {
+    "babel-cli": "^6.24.0",
+    "babel-preset-env": "^1.2.2",
+    "babel-preset-es2017": "^6.22.0",
+    "babel-preset-stage-0": "^6.22.0",
+    "classnames": "^2.2.5",
+    "react": "^15.4.2"
+  }
 }
