--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "babel-preset-es2017": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
     "classnames": "^2.2.5",
-    "react": "^15.4.2"
+    "jss": "^6.5.0",
+    "jss-preset-default": "^1.3.1",
+    "react": "^15.4.2",
+    "react-jss": "^5.4.0"
   }
 }
